--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,13 @@ dependencies {
     implementation "com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0"
 
     testImplementation 'junit:junit:4.13.2'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    testImplementation "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
+    androidTestImplementation 'org.mockito:mockito-android:3.12.4'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
