--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,5 +28,5 @@ jobs:
       run: ./gradlew test
     - name: Run sonarqube
       env:
-        SONAR_TOKEN: ${{ squ_e0e4aa37dd53d8e3cea8c8a0f482d7289dfdf196 }}
+        SONAR_TOKEN: squ_e0e4aa37dd53d8e3cea8c8a0f482d7289dfdf196
       run: ./gradlew sonarqube
