--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,11 +1,13 @@
 name: Android CI
 
 on:
+  worflow_call:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+permissions: 
+  contents: read
 jobs:
   build:
 
