--- a/.github/workflows/container-pipeline.yml
+++ b/.github/workflows/container-pipeline.yml
@@ -30,20 +30,20 @@ jobs:
       id-token: write
       checks: write
 
-  deploy-staging:
-    needs: [delivery]
-    uses: ./.github/workflows/deploy-aws-app-runner.yml
-    with:
-      environment: Staging
-    permissions:
-      packages: read
-    secrets: inherit
+  # deploy-staging:
+  #   needs: [delivery]
+  #   uses: ./.github/workflows/deploy-aws-app-runner.yml
+  #   with:
+  #     environment: Staging
+  #   permissions:
+  #     packages: read
+  #   secrets: inherit
 
-  deploy-production:
-    needs: [deploy-staging]
-    uses: ./.github/workflows/deploy-aws-app-runner.yml
-    with:
-      environment: Production
-    permissions:
-      packages: read
-    secrets: inherit
+  # deploy-production:
+  #   needs: [deploy-staging]
+  #   uses: ./.github/workflows/deploy-aws-app-runner.yml
+  #   with:
+  #     environment: Production
+  #   permissions:
+  #     packages: read
+  #   secrets: inherit
